--- a/sofa-ecommerce/package.json
+++ b/sofa-ecommerce/package.json
@@ -10,7 +10,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test": "echo \"No tests yet\""
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
