--- a/package.json
+++ b/package.json
@@ -25,10 +25,15 @@
     ]
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.22",
+    "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-hook-form": "^7.64.0",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@commitlint/cli": "^20.1.0",
