--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,7 @@ jobs:
           cache: 'pnpm'
 
       - name: Install pnpm
+        run: npm install -g pnpm@latest
         uses: pnpm/action-setup@v4
         with:
           version: 9
