--- a/docker-compose.postgres.yml
+++ b/docker-compose.postgres.yml
@@ -1,4 +1,4 @@
-version: '3.7'
+version: "3.7"
 
 services:
   postgres:
@@ -13,7 +13,7 @@ services:
     networks:
       - prisma-network
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U prisma -d postgres" ]
+      test: ["CMD-SHELL", "pg_isready -U prisma -d postgres"]
       interval: 5s
       timeout: 2s
       retries: 20
@@ -27,7 +27,6 @@ services:
 
 networks:
   prisma-network:
-
 
 volumes:
   postgres_data:
