--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "test": "echo \"No tests yet\"",
     "prisma:generate": "prisma generate",
     "prisma:migrate:dev": "prisma migrate dev --name init --schema=prisma/schema.prisma",
-    "prisma:studio": "prisma studio"
+    "prisma:studio": "prisma studio",
+    "prisma:seed": "ts-node --transpile-only prisma/seed.ts"
+  },
+  "prisma": {
+    "seed": "ts-node --transpile-only prisma/seed.ts"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
@@ -30,6 +34,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.16.3",
+    "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.23.22",
@@ -46,7 +51,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/cli": "^4.1.14",
     "@tailwindcss/postcss": "^4.1.14",
-    "@types/node": "^20",
+    "@types/node": "^20.19.19",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@typescript-eslint/eslint-plugin": "^8.45.0",
@@ -66,6 +71,7 @@
     "prettier": "^3.6.2",
     "prisma": "^6.16.3",
     "tailwindcss": "^4.1.14",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   }
 }
