--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
       "eslint --fix",
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ],
     "*.{json,md,css,scss,html}": [
       "prettier --write"
