--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "prepare": "husky",
+    "test": "echo \"No tests yet\"",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "format": "prettier --write .",
@@ -12,7 +13,6 @@
     "build": "next build",
     "start": "next start",
     "typecheck": "tsc --noEmit",
-    "test": "echo \"No tests yet\"",
     "prisma:generate": "prisma generate",
     "prisma:migrate:dev": "prisma migrate dev --name init --schema=prisma/schema.prisma",
     "prisma:studio": "prisma studio",
@@ -30,9 +30,16 @@
       "prettier --write"
     ]
   },
+  "compilerOptions": {
+    "types": [
+      "jest",
+      "node"
+    ]
+  },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.16.3",
+    "@reduxjs/toolkit": "^2.9.1",
     "@tanstack/query-async-storage-persister": "^5.90.7",
     "@tanstack/react-query": "^5.90.5",
     "@tanstack/react-query-devtools": "^5.90.2",
@@ -47,6 +54,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.64.0",
+    "react-redux": "^9.2.0",
     "zod": "^4.1.11"
   },
   "devDependencies": {
@@ -55,6 +63,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/cli": "^4.1.14",
     "@tailwindcss/postcss": "^4.1.14",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20.19.19",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -70,11 +79,13 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-unused-imports": "^4.2.0",
     "husky": "^9.1.7",
+    "jest": "^30.2.0",
     "lint-staged": "^16.2.5",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "prisma": "^6.16.3",
     "tailwindcss": "^4.1.14",
+    "ts-jest": "^29.4.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
