--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
       {
         "name": "next"
       }
-    ]
+    ],
+    "types": ["jest", "node"] // ✅ Thêm dòng này
   },
   "include": ["**/*.ts", "**/*.tsx", "next-env.d.ts", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
