--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.64.0",
     "react-redux": "^9.2.0",
+    "redux-persist": "^6.0.0",
     "zod": "^4.1.11"
   },
   "devDependencies": {
