--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     ]
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.11.1",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.16.3",
     "@reduxjs/toolkit": "^2.9.1",
@@ -52,6 +53,7 @@
     "localforage": "^1.10.0",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
+    "next-auth": "^4.24.13",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.64.0",
