--- a/.prettierrc
+++ b/.prettierrc
@@ -5,7 +5,7 @@
   "useTabs": false,
   "trailingComma": "es5",
   "printWidth": 120,
-  "endOfLine": "crlf",
+  "endOfLine": "auto",
   "jsxSingleQuote": false,
   "bracketSameLine": true
 }
