--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,3 @@
 {
-  "buildCommand": "npx prisma generate && next build",
-  "ignoreCommand": "npx prisma generate"
+  "buildCommand": "npx prisma generate && next build"
 }
