--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "framer-motion": "^12.23.22",
     "localforage": "^1.10.0",
     "lucide-react": "^0.544.0",
-    "next": "15.5.4",
+    "next": "^16.0.7",
     "next-auth": "^4.24.13",
     "pg": "^8.16.3",
     "react": "19.1.0",
