--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "postinstall": "prisma generate"
   },
   "prisma": {
-    "seed": "node --loader ts-node/esm prisma/seed.ts"
+    "seed": "node --loader ts-node/esm prisma/seed/index.ts"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
@@ -62,6 +62,7 @@
     "react-hook-form": "^7.64.0",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
+    "xlsx": "^0.18.5",
     "zod": "^4.1.11"
   },
   "devDependencies": {
